Bug 292647 - DAV crashing
Summary: DAV crashing
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-28 02:05 UTC by Chad Stamps
Modified: 2012-01-31 22:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chad Stamps 2012-01-28 02:05:31 UTC
Application: akonadi_davgroupware_resource (4.8)
KDE Platform Version: 4.8.00 (4.8.0
Qt Version: 4.8.0
Operating System: Linux 3.2.0-10-generic x86_64
Distribution: Ubuntu precise (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

Just keeps crashing over and over, have to kill Akondi to get it to stop ever since I added my CardDAV and CalDAV

The crash can be reproduced every time.

-- Backtrace:
Application: ownCloud of type DAV groupware resource (akonadi_davgroupware_resource), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  DavProtocolAttribute::davProtocol (this=0x0) at ../../../../resources/dav/resource/davprotocolattribute.cpp:28
#7  0x000000000042d98c in DavUtils::createDavItem (item=..., collection=...) at ../../../../resources/dav/common/davutils.cpp:147
#8  0x0000000000444d6e in DavGroupwareResource::itemAdded (this=0x914430, item=..., collection=...) at ../../../../resources/dav/resource/davgroupwareresource.cpp:328
#9  0x00007f8a2c463fba in Akonadi::ResourceBasePrivate::itemAdded (this=0x9144e0, item=..., collection=...) at ../../akonadi/resourcebase.cpp:199
#10 0x00007f8a2c45d12e in Akonadi::ResourceBasePrivate::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./resourcebase.moc:84
#11 0x00007f8a2dd80801 in QMetaObject::activate (sender=0x919080, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff9f4554c0) at kernel/qobject.cpp:3547
#12 0x00007f8a2c44746a in Akonadi::Monitor::itemAdded (this=<optimized out>, _t1=..., _t2=...) at ./monitor.moc:203
#13 0x00007f8a2c44c0f1 in Akonadi::MonitorPrivate::emitItemNotification (this=0x9198e0, msg=..., item=..., collection=..., collectionDest=...) at ../../akonadi/monitor_p.cpp:520
#14 0x00007f8a2c44d052 in Akonadi::MonitorPrivate::emitNotification (this=0x9198e0, msg=...) at ../../akonadi/monitor_p.cpp:288
#15 0x00007f8a2c3ad681 in Akonadi::ChangeRecorderPrivate::emitNotification (this=0x9198e0, msg=...) at ../../akonadi/changerecorder_p.h:60
#16 0x00007f8a2c44cd26 in Akonadi::MonitorPrivate::flushPipeline (this=0x9198e0) at ../../akonadi/monitor_p.cpp:429
#17 0x00007f8a2c44d1f9 in Akonadi::MonitorPrivate::dataAvailable (this=0x9198e0) at ../../akonadi/monitor_p.cpp:438
#18 0x00007f8a2dd80801 in QMetaObject::activate (sender=0x919580, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#19 0x00007f8a2c3b2aed in Akonadi::EntityCache<Akonadi::Item, Akonadi::ItemFetchJob, Akonadi::ItemFetchScope>::processResult (this=0x919580, job=<optimized out>) at ../../akonadi/entitycache_p.h:192
#20 0x00007f8a2dd80801 in QMetaObject::activate (sender=0x93d860, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff9f455bf0) at kernel/qobject.cpp:3547
#21 0x00007f8a2cd496a2 in KJob::result (this=<optimized out>, _t1=0x93d860) at ./kjob.moc:208
#22 0x00007f8a2cd496e0 in KJob::emitResult (this=0x93d860) at ../../kdecore/jobs/kjob.cpp:318
#23 0x00007f8a2dd859c6 in QObject::event (this=0x93d860, e=<optimized out>) at kernel/qobject.cpp:1195
#24 0x00007f8a2aa2f5e4 in notify_helper (e=0x91b100, receiver=0x93d860, this=0x79c4b0) at kernel/qapplication.cpp:4555
#25 QApplicationPrivate::notify_helper (this=0x79c4b0, receiver=0x93d860, e=0x91b100) at kernel/qapplication.cpp:4527
#26 0x00007f8a2aa34463 in QApplication::notify (this=0x7fff9f456590, receiver=0x93d860, e=0x91b100) at kernel/qapplication.cpp:4416
#27 0x00007f8a2b767a46 in KApplication::notify (this=0x7fff9f456590, receiver=0x93d860, event=0x91b100) at ../../kdeui/kernel/kapplication.cpp:311
#28 0x00007f8a2dd6c41c in QCoreApplication::notifyInternal (this=0x7fff9f456590, receiver=0x93d860, event=0x91b100) at kernel/qcoreapplication.cpp:876
#29 0x00007f8a2dd701ea in sendEvent (event=0x91b100, receiver=0x93d860) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#30 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x76f380) at kernel/qcoreapplication.cpp:1500
#31 0x00007f8a2dd9b513 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#32 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#33 0x00007f8a294c07da in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f8a294c0ba0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007f8a294c0c64 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007f8a2dd9b93f in QEventDispatcherGlib::processEvents (this=0x770be0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00007f8a2aad71ce in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007f8a2dd6b202 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007f8a2dd6b457 in QEventLoop::exec (this=0x7fff9f456510, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007f8a2dd704e7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#41 0x00007f8a2c45da26 in Akonadi::ResourceBase::init (r=0x914430) at ../../akonadi/resourcebase.cpp:408
#42 0x000000000044a566 in Akonadi::ResourceBase::init<DavGroupwareResource> (argc=<optimized out>, argv=<optimized out>) at /usr/include/akonadi/resourcebase.h:188
#43 0x00007f8a29fcd30d in __libc_start_main (main=0x411b30 <main(int, char**)>, argc=3, ubp_av=0x7fff9f4566a8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff9f456698) at libc-start.c:226
#44 0x0000000000411b61 in _start ()

Reported using DrKonqi
Comment 1 Frederik Gladhorn 2012-01-29 01:54:45 UTC
I have the same issue after trying to set up contact syncing with owncloud.
Comment 2 Allen Winter 2012-01-31 22:19:48 UTC
Git commit 7820402d17d9a1668db9ca99b07d743728581d0b by Allen Winter.
Committed on 31/01/2012 at 23:17.
Pushed by winterz into branch 'master'.

in createDavItem(), if the DavProtocolAttribute is 0, then we can't
get the mimetype for vcards from the DavProtocol.  In this case,
assume the mimetype is the KABC::Addressee:mimeType().
MERGE: 4.8
FIXED-IN: 4.8.1

M  +7    -1    resources/dav/common/davutils.cpp

http://commits.kde.org/kdepim-runtime/7820402d17d9a1668db9ca99b07d743728581d0b
Comment 3 Allen Winter 2012-01-31 22:20:27 UTC
Git commit 2d63111321fc3caaa4b2ddd847e29cc301015e03 by Allen Winter.
Committed on 31/01/2012 at 23:17.
Pushed by winterz into branch 'KDE/4.8'.

in createDavItem(), if the DavProtocolAttribute is 0, then we can't
get the mimetype for vcards from the DavProtocol.  In this case,
assume the mimetype is the KABC::Addressee:mimeType().
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit 7820402d17d9a1668db9ca99b07d743728581d0b)

M  +7    -1    resources/dav/common/davutils.cpp

http://commits.kde.org/kdepim-runtime/2d63111321fc3caaa4b2ddd847e29cc301015e03