in createDavItem(), if the DavProtocolAttribute is 0, then we can't get the mimetype for vcards from the DavProtocol.  In this case, assume the mimetype is the KABC::Addressee:mimeType().

BUG: 292647
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit 7820402d17d9a1668db9ca99b07d743728581d0b)